chore: openjdk 22, kotlin 1.9-rc, k2 compiler, FFM API changes